Remove 'Distributed Dynamo' terminology from Lab 3
- Changed title to 'KV-Aware Routing with Data-Parallel Workers'
- Updated 'When to Use Distributed Dynamo' → 'When to Use KV-Aware Routing'
- Fixed deployment names: vllm-distributed-demo → vllm-kv-demo
- Updated cleanup and troubleshooting sections with correct names
- Removed NIXL references (not used in data-parallel setup)
- Updated summary and final message to focus on KV-aware routing
- Dynamo is inherently distributed, no need for qualifier

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e20a29d7",
+   "id": "cc142bf3",
    "metadata": {},
    "source": [
-    "# Lab 3: Distributed Dynamo with Multi-GPU/Multi-Node Serving\n",
+    "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
     "\n",
     "## Overview\n",
     "\n",
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec324f38",
+   "id": "c53e486e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7965027",
+   "id": "f2b1243c",
    "metadata": {},
    "source": [
     "### Why NATS is Required\n",
@@ -218,17 +218,17 @@
     "- NIXL transfers cache data between nodes over the network (RDMA/TCP)\n",
     "- Kubernetes Services automatically load balance traffic across frontend replicas\n",
     "\n",
-    "### When to Use Distributed Dynamo\n",
+    "### When to Use KV-Aware Routing\n",
     "\n",
-    "| Scenario | Use Distributed Dynamo? | Why |\n",
+    "| Scenario | Use KV-Aware Routing? | Why |\n",
     "|----------|-----------|-----|\n",
-    "| Single GPU | ❌ No | Adds overhead without benefit |\n",
-    "| Multiple GPUs, single node | ✅ Yes | KV-aware routing improves cache hits between GPU workers |\n",
-    "| 2-3 nodes | ✅ Yes | Cache awareness and coordination provide benefits |\n",
-    "| 4+ nodes | ✅ Strongly Yes | Significant performance improvements from distributed cache awareness |\n",
-    "| High traffic, repeated queries | ✅ Yes | Cache-aware routing reduces latency |\n",
-    "| Low traffic, unique queries | ⚠️ Maybe | Lower cache hit rates, but coordination still useful |\n",
-    "| Dynamo 0.8+ | ℹ️ Info | Can use K8s-native discovery (no NATS/etcd required) for simple deployments |\n",
+    "| Single worker | ❌ No | No routing decisions to make (only 1 worker) |\n",
+    "| Multiple workers, single node | ✅ Yes | Router directs requests to workers with cached prefixes |\n",
+    "| 2-3 nodes | ✅ Yes | Cache-aware routing works across nodes |\n",
+    "| 4+ nodes | ✅ Yes | Coordination via NATS scales well |\n",
+    "| High traffic, repeated queries | ✅ Yes | High cache hit potential |\n",
+    "| Low traffic, unique queries | ⚠️ Maybe | Lower cache hit rates, coordination overhead |\n",
+    "| Conversation/chatbot workloads | ✅ Strongly Yes | Shared prefixes and system prompts benefit greatly |\n",
     "\n",
     "---\n",
     "\n",
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b5c9c34",
+   "id": "4f75eda9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86ae6745",
+   "id": "45d875a3",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d118b507",
+   "id": "30e5574b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3a1ee33",
+   "id": "0d5dabaa",
    "metadata": {},
    "source": [
     "**What this enables:**\n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0e50730",
+   "id": "0f176ce0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d607bdd4",
+   "id": "d260f9f0",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59a14840",
+   "id": "9c605b29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "821b3939",
+   "id": "699bd573",
    "metadata": {},
    "source": [
     "---\n",
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeffe4af",
+   "id": "0732167e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dff05ee0",
+   "id": "5a9190d4",
    "metadata": {},
    "source": [
     "---\n",
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "841d9a95",
+   "id": "c29950ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b307e225",
+   "id": "4f0d7e8b",
    "metadata": {},
    "source": [
     "### Step 2: Clean Up Lab 1 Deployment (If Still Running)\n",
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8df14237",
+   "id": "ee911e45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c14d5fef",
+   "id": "c56baff5",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a5be6fd",
+   "id": "aa2bf9c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0b91cfc",
+   "id": "f124631c",
    "metadata": {},
    "source": [
     "---\n",
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5101d480",
+   "id": "e7e0d590",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26394d95",
+   "id": "a0ded0ec",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63591eb0",
+   "id": "7523c69a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "549d8d1c",
+   "id": "ace8bc89",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9324b8c8",
+   "id": "61b4bb55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a012700",
+   "id": "2dfb14c4",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "785f6d32",
+   "id": "2e60f052",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a2dac93",
+   "id": "1c62aeea",
    "metadata": {},
    "source": [
     "---\n",
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91e45193",
+   "id": "b98b6108",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5855a3ac",
+   "id": "a93c9d89",
    "metadata": {},
    "source": [
     "**Expected Behavior:**\n",
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16c7bd2b",
+   "id": "adadbda0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfc7f79e",
+   "id": "d7fda590",
    "metadata": {},
    "source": [
     "**What to look for:**\n",
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd5c2566",
+   "id": "5ed7d843",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57a6725e",
+   "id": "4d511e18",
    "metadata": {},
    "source": [
     "---\n",
@@ -1010,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19d6f0d0",
+   "id": "b5a643b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,30 +1018,30 @@
     "# Get cache stats from worker logs\n",
     "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
-    "WORKER_POD=$(kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-component=VllmWorker,nvidia.com/dynamo-graph-deployment-name=vllm-distributed-demo -o jsonpath='{.items[0].metadata.name}' 2>/dev/null)\n",
+    "WORKER_POD=$(kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-component=VllmWorker,nvidia.com/dynamo-graph-deployment-name=vllm-kv-demo -o jsonpath='{.items[0].metadata.name}' 2>/dev/null)\n",
     "\n",
     "if [ -n \"$WORKER_POD\" ]; then\n",
-    "    echo \"Checking NIXL activity in worker logs...\"\n",
+    "    echo \"Checking cache activity in worker logs...\"\n",
     "    echo \"\"\n",
-    "    kubectl logs -n $NAMESPACE $WORKER_POD --tail=100 | grep -i \"nixl\" | tail -10\n",
+    "    kubectl logs -n $NAMESPACE $WORKER_POD --tail=100 | grep -i \"cache\\|prefix\" | tail -10\n",
     "    \n",
     "    echo \"\"\n",
     "    echo \"Worker pod: $WORKER_POD\"\n",
     "    echo \"\"\n",
     "    echo \"What to look for:\"\n",
-    "    echo \"  - NIXL initialization messages (KV cache transfer setup)\"\n",
-    "    echo \"  - KV cache registration events\"\n",
-    "    echo \"  - UCX backend messages (if using RDMA for cache transfer)\"\n",
-    "    echo \"  - K8s service discovery messages\"\n",
+    "    echo \"  - Prefix cache hits/misses\"\n",
+    "    echo \"  - KV cache block creation events\"\n",
+    "    echo \"  - Cache eviction messages\"\n",
+    "    echo \"  - NATS connection status\"\n",
     "else\n",
     "    echo \"⚠️ No worker pods found\"\n",
-    "    echo \"Make sure the vllm-distributed-demo deployment is running\"\n",
+    "    echo \"Make sure the vllm-kv-demo deployment is running\"\n",
     "fi"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "99a3c2fa",
+   "id": "9096ce26",
    "metadata": {},
    "source": [
     "**Note**: Cache hit/miss metrics depend on workload patterns. Even on a single node with multiple GPUs, KV-aware routing can improve cache hits by directing requests to the worker that already has relevant cache blocks.\n",
@@ -1050,30 +1050,30 @@
     "\n",
     "## Section 7: Cleanup\n",
     "\n",
-    "### Step 1: Remove Distributed Demo Deployment"
+    "### Step 1: Remove KV-Aware Routing Deployment"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5d17085",
+   "id": "3b5b3657",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "# Delete the distributed deployment\n",
-    "echo \"Removing distributed Dynamo deployment...\"\n",
+    "# Delete the KV-aware routing deployment\n",
+    "echo \"Removing KV-aware routing deployment...\"\n",
     "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
-    "kubectl delete dynamographdeployment vllm-distributed-demo -n $NAMESPACE\n",
-    "kubectl delete svc vllm-distributed-demo-frontend-np -n $NAMESPACE\n",
+    "kubectl delete dynamographdeployment vllm-kv-demo -n $NAMESPACE\n",
+    "kubectl delete svc vllm-kv-frontend-np -n $NAMESPACE\n",
     "\n",
-    "echo \"✓ Distributed deployment removed\""
+    "echo \"✓ KV-aware routing deployment removed\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d2393bab",
+   "id": "200bb00d",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1084,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a1fbada",
+   "id": "24005a87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,18 +1109,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d0cb0b6",
+   "id": "ab8f64fc",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
     "## Summary\n",
     "\n",
-    "You've deployed a distributed Dynamo architecture where multiple workers collaborate to serve requests. Unlike Lab 1's disaggregated approach (specialized prefill/decode workers), this distributed model uses identical workers that share cached computations over the network via NIXL.\n",
+    "You've deployed KV-aware routing with data-parallel workers, where the router intelligently directs requests to workers based on their cached data.\n",
     "\n",
-    "**What makes this powerful:**\n",
-    "- Workers discover each other automatically through Kubernetes\n",
-    "- KV cache sharing speeds up similar or follow-up requests\n",
+    "**What you learned:**\n",
+    "- NATS coordinates cache state across workers (events published/subscribed)\n",
+    "- Router tracks which workers have cached which prefixes\n",
+    "- Requests with similar prefixes get routed to the same worker for cache reuse\n",
     "- Scales horizontally—add more workers for more traffic\n",
     "- Works on single nodes with multiple GPUs or across multi-node clusters\n",
     "\n",
@@ -1140,17 +1141,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b0ac3da",
+   "id": "c47117c5",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Check deployment status\n",
     "export NAMESPACE=${NAMESPACE:-dynamo}\n",
-    "kubectl describe dynamographdeployment vllm-distributed-demo -n $NAMESPACE\n",
+    "kubectl describe dynamographdeployment vllm-kv-demo -n $NAMESPACE\n",
     "\n",
     "# Check pod status\n",
-    "kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-graph-deployment-name=vllm-distributed-demo\n",
+    "kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-graph-deployment-name=vllm-kv-demo\n",
     "\n",
     "# Check worker logs\n",
     "kubectl logs -n $NAMESPACE -l nvidia.com/dynamo-component=VllmWorker\n",
@@ -1163,7 +1164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65d81a34",
+   "id": "f00c4229",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -1172,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc6e69f2",
+   "id": "1f1186d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,7 +1197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1874e785",
+   "id": "7be91d49",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -1205,7 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d154c017",
+   "id": "2c8de877",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,7 +1220,7 @@
     "kubectl logs -n $NAMESPACE -l nvidia.com/dynamo-component=Frontend\n",
     "\n",
     "# Verify NodePort service exists\n",
-    "kubectl get svc vllm-distributed-demo-frontend-np -n $NAMESPACE\n",
+    "kubectl get svc vllm-kv-frontend-np -n $NAMESPACE\n",
     "\n",
     "# Common issues:\n",
     "# - NodePort service not created\n",
@@ -1229,7 +1230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db8f632e",
+   "id": "3dbe4547",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1370,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa515526",
+   "id": "e6c954cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1405,7 +1406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "404122ba",
+   "id": "01119b58",
    "metadata": {},
    "source": [
     "### Step 2: Install etcd Coordination Layer\n",
@@ -1416,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bdf705f",
+   "id": "a8919fa6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,7 +1449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64ec5e61",
+   "id": "7d415d45",
    "metadata": {},
    "source": [
     "### Step 3: Verify Infrastructure\n",
@@ -1459,7 +1460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "459ddca5",
+   "id": "8882c69f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,7 +1493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a08269a8",
+   "id": "64c099a8",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring (Optional)\n",
@@ -1503,7 +1504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a22da733",
+   "id": "769fa5eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1553,7 +1554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "439e6b26",
+   "id": "ea17c367",
    "metadata": {},
    "source": [
     "### Cleanup (NATS/etcd)\n",
@@ -1564,7 +1565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "755bc6c2",
+   "id": "000841c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1589,7 +1590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "759cb75e",
+   "id": "0863159b",
    "metadata": {},
    "source": [
     "### Configuring Dynamo to Use NATS/etcd\n",
@@ -1629,9 +1630,9 @@
     "\n",
     "---\n",
     "\n",
-    "**Congratulations! You've completed Lab 3: Distributed Dynamo with Grove Orchestration** 🌲\n",
+    "**Congratulations! You've completed Lab 3: KV-Aware Routing** 🎯\n",
     "\n",
-    "You now understand the fundamentals of distributed LLM serving, the difference between Grove (operator) and Dynamo (serving framework), and how K8s-native discovery enables distributed coordination!"
+    "You now understand how KV-aware routing works, how NATS coordinates cache state across workers, and how intelligent request placement can improve cache hit rates for workloads with repeated prompt patterns!"
    ]
   }
  ],
