Consolidate repetitive sections in Lab 3 Section 1
- Merged 'Architecture Components', 'How Cache Events Work', and 'Why NATS is Required' into single 'How KV-Aware Routing Works' section
- Removed duplicate architecture diagram
- Removed Lab 1 comparison (already covered elsewhere)
- Combined Python pseudocode example with flow description
- Kept one clear architecture diagram with annotations
- Simplified 'When KV-Aware Routing Helps' with clearer categories
- Reduced ~110 lines to ~40 lines without losing key information

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cc142bf3",
+   "id": "c7c76f29",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -57,129 +57,55 @@
     "4. Worker 1 reuses the cached computation for \"Explain quantum computing\", only processes the new part\n",
     "5. Result: **Much faster** time-to-first-token (TTFT)\n",
     "\n",
-    "### Architecture Components\n",
-    "\n",
-    "```\n",
-    "Client Request\n",
-    "      ↓\n",
-    "Frontend (OpenAI API)\n",
-    "      ↓\n",
-    "KV-Aware Router ←──── NATS (KV Events) ←──── Workers publish cache events\n",
-    "      ↓                                              ↓\n",
-    "   Analyzes:                                   \"I cached blocks 0-5\"\n",
-    "   - Input tokens                              \"I removed block 3\"\n",
-    "   - Cached blocks per worker                  \"I stored block 10\"\n",
-    "   - Worker load\n",
-    "      ↓\n",
-    "   Selects best worker\n",
-    "      ↓\n",
-    "Worker 1 or Worker 2 (Data Parallel - identical)\n",
-    "      ↓\n",
-    "Response to Client\n",
-    "```\n",
-    "\n",
-    "**Key Components:**\n",
-    "\n",
-    "1. **Frontend**: OpenAI-compatible API server\n",
-    "2. **KV-Aware Router**: Tracks global cache state, selects optimal worker\n",
-    "3. **NATS**: Message bus for cache event coordination\n",
-    "4. **Workers**: Identical inference engines (vLLM/SGLang/TensorRT-LLM)\n",
-    "\n",
-    "### How Cache Events Work\n",
-    "\n",
-    "Each worker publishes events to NATS when cache blocks are created or removed:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c53e486e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# When a worker processes a request:\n",
-    "worker.process_prompt(\"Explain quantum computing\")\n",
-    "  → Stores KV blocks 0, 1, 2, 3, 4, 5\n",
-    "  → Publishes to NATS: \"Worker-1: Stored blocks [0,1,2,3,4,5] with hash XYZ\"\n",
-    "\n",
-    "# Router receives event and updates its global view:\n",
-    "router.cache_index[\"Worker-1\"][\"XYZ\"] = [0,1,2,3,4,5]\n",
-    "\n",
-    "# Next similar request arrives:\n",
-    "new_request = \"Explain quantum computing in simple terms\"\n",
-    "  → Router checks: Which worker has matching prefix?\n",
-    "  → Finds: Worker-1 has blocks 0-5 matching this prefix\n",
-    "  → Routes to Worker-1 (avoids recomputation)\n",
-    "\n",
-    "# Worker-1 reuses cached blocks:\n",
-    "worker1.process_request()\n",
-    "  → Blocks 0-5: CACHED (instant)\n",
-    "  → Blocks 6-10: NEW (compute only these)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f2b1243c",
-   "metadata": {},
-   "source": [
-    "### Why NATS is Required\n",
-    "\n",
-    "**The Problem**: How does the router know which worker has which cache blocks?\n",
-    "\n",
-    "**The Solution**: Workers publish cache events to NATS, router subscribes to these events.\n",
-    "\n",
-    "**Why not just Kubernetes?**\n",
-    "- K8s APIs are for service discovery (which workers exist), not cache coordination (what's cached where)\n",
-    "- Cache events happen thousands of times per second - too fast for K8s APIs\n",
-    "- NATS provides low-latency pub/sub specifically designed for this use case\n",
+    "### How KV-Aware Routing Works\n",
     "\n",
     "**Architecture:**\n",
     "```\n",
     "┌──────────┐  ┌──────────┐\n",
-    "│ Worker 1 │  │ Worker 2 │\n",
+    "│ Worker 1 │  │ Worker 2 │  (Data-parallel: identical workers)\n",
     "└────┬─────┘  └────┬─────┘\n",
     "     │             │\n",
     "     └─────────────┘\n",
     "            │ Publish cache events\n",
     "            ↓\n",
     "   ┌────────────────┐\n",
-    "   │  NATS Server   │\n",
+    "   │  NATS Server   │  (Message bus for cache coordination)\n",
     "   │  (Message Bus) │\n",
     "   └────────┬───────┘\n",
     "            │ Subscribe to events\n",
     "            ↓\n",
     "   ┌────────────────┐\n",
-    "   │  KV Router     │\n",
+    "   │  KV Router     │  (Tracks which worker has which cached blocks)\n",
     "   │ (Global Index) │\n",
     "   └────────────────┘\n",
+    "            ↓\n",
+    "   Routes requests to workers with matching cached prefixes\n",
     "```\n",
     "\n",
-    "### Data Parallelism vs Disaggregated Serving\n",
+    "**The Flow:**\n",
+    "1. **Request arrives**: \"Explain quantum computing\"\n",
+    "2. **Router checks cache index**: No worker has this cached → picks Worker 1\n",
+    "3. **Worker 1 processes**: Creates KV cache blocks 0-5\n",
+    "4. **Worker 1 publishes to NATS**: \"I cached blocks 0-5 for prefix 'Explain quantum computing'\"\n",
+    "5. **Router updates index**: Worker 1 has these blocks\n",
+    "6. **Next request arrives**: \"Explain quantum computing in simple terms\"\n",
+    "7. **Router checks cache index**: Worker 1 has matching prefix → routes to Worker 1\n",
+    "8. **Worker 1 reuses cache**: Blocks 0-5 already computed, only processes new tokens\n",
     "\n",
-    "**Lab 1 (Disaggregated Serving):**\n",
-    "- Prefill Worker → Decode Worker (pipeline)\n",
-    "- Workers are specialized (different roles)\n",
-    "- Tight coupling (must work together)\n",
-    "- 1 request = 1 prefill worker + 1 decode worker\n",
-    "\n",
-    "**Lab 3 (Data Parallel with KV-Aware Routing):**\n",
-    "- Worker 1, Worker 2 (both identical)\n",
-    "- Workers are independent (same role)\n",
-    "- Loose coupling (work in parallel)\n",
-    "- 1 request = 1 worker (router chooses which)\n",
+    "**Why NATS?** Kubernetes provides service discovery (which workers exist) but not cache coordination (what's cached where). NATS handles thousands of cache events per second with low latency.\n",
     "\n",
     "### When KV-Aware Routing Helps\n",
     "\n",
-    "**High Cache Hit Workloads:**\n",
-    "- ✅ Chatbots (conversation history repeats)\n",
-    "- ✅ Document Q&A (same document, multiple questions)\n",
+    "**Best for:**\n",
+    "- ✅ Chatbots and conversational AI (repeated system prompts, conversation history)\n",
+    "- ✅ Document Q&A (same document, different questions)\n",
+    "- ✅ Batch processing with shared prefixes\n",
     "- ✅ Code assistants (repeatedly analyzing same files)\n",
-    "- ✅ System prompt reuse (same instructions for many requests)\n",
     "\n",
-    "**Low Cache Hit Workloads:**\n",
-    "- ⚠️ Random questions (no shared context)\n",
-    "- ⚠️ One-shot requests (no follow-ups)\n",
-    "- ⚠️ Completely unique prompts each time\n",
+    "**Not ideal for:**\n",
+    "- ⚠️ Completely unique prompts every time\n",
+    "- ⚠️ Single worker deployments (no routing decisions to make)\n",
+    "- ⚠️ Very short contexts (cache overhead exceeds benefit)\n",
     "\n",
     "### Performance Impact\n",
     "\n",
@@ -252,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f75eda9",
+   "id": "51b21d81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45d875a3",
+   "id": "97304389",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -278,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30e5574b",
+   "id": "b291f712",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d5dabaa",
+   "id": "d4c73712",
    "metadata": {},
    "source": [
     "**What this enables:**\n",
@@ -318,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f176ce0",
+   "id": "6b5c993a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d260f9f0",
+   "id": "288d6083",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -348,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c605b29",
+   "id": "7c4cb218",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "699bd573",
+   "id": "b8ffb8ae",
    "metadata": {},
    "source": [
     "---\n",
@@ -376,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0732167e",
+   "id": "226e1741",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a9190d4",
+   "id": "0188dd51",
    "metadata": {},
    "source": [
     "---\n",
@@ -418,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c29950ea",
+   "id": "c6bb2337",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f0d7e8b",
+   "id": "0acffb52",
    "metadata": {},
    "source": [
     "### Step 2: Clean Up Lab 1 Deployment (If Still Running)\n",
@@ -457,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee911e45",
+   "id": "fc22130c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c56baff5",
+   "id": "832d82dd",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -494,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa2bf9c3",
+   "id": "6e4366ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f124631c",
+   "id": "6dd9c3cd",
    "metadata": {},
    "source": [
     "---\n",
@@ -541,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7e0d590",
+   "id": "7c50849a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0ded0ec",
+   "id": "da074227",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -648,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7523c69a",
+   "id": "3be4b692",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ace8bc89",
+   "id": "d013a226",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -692,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61b4bb55",
+   "id": "b58387e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dfb14c4",
+   "id": "8e0009de",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -731,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e60f052",
+   "id": "fb37ea1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c62aeea",
+   "id": "778ac47e",
    "metadata": {},
    "source": [
     "---\n",
@@ -771,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b98b6108",
+   "id": "ee95528a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a93c9d89",
+   "id": "4948978e",
    "metadata": {},
    "source": [
     "**Expected Behavior:**\n",
@@ -839,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adadbda0",
+   "id": "bdb5803d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7fda590",
+   "id": "66c2fa2f",
    "metadata": {},
    "source": [
     "**What to look for:**\n",
@@ -873,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ed7d843",
+   "id": "ad626674",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +846,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d511e18",
+   "id": "510972d7",
    "metadata": {},
    "source": [
     "---\n",
@@ -1010,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5a643b9",
+   "id": "22e8e209",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9096ce26",
+   "id": "db3c5b68",
    "metadata": {},
    "source": [
     "**Note**: Cache hit/miss metrics depend on workload patterns. Even on a single node with multiple GPUs, KV-aware routing can improve cache hits by directing requests to the worker that already has relevant cache blocks.\n",
@@ -1056,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b5b3657",
+   "id": "1ec6a7c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +999,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "200bb00d",
+   "id": "4b357346",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1084,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24005a87",
+   "id": "ec762d7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab8f64fc",
+   "id": "27cbe297",
    "metadata": {},
    "source": [
     "---\n",
@@ -1141,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c47117c5",
+   "id": "afb0aa58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1164,7 +1090,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f00c4229",
+   "id": "6cf6dbdc",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -1173,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f1186d8",
+   "id": "e9d4eaea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7be91d49",
+   "id": "cb8820a4",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -1206,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c8de877",
+   "id": "a7ca313f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dbe4547",
+   "id": "014a0862",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1371,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6c954cc",
+   "id": "15eb5b6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1406,7 +1332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01119b58",
+   "id": "47bd59ae",
    "metadata": {},
    "source": [
     "### Step 2: Install etcd Coordination Layer\n",
@@ -1417,7 +1343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8919fa6",
+   "id": "0166dc1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1449,7 +1375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d415d45",
+   "id": "f124ca7c",
    "metadata": {},
    "source": [
     "### Step 3: Verify Infrastructure\n",
@@ -1460,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8882c69f",
+   "id": "9e2ffe11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1493,7 +1419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64c099a8",
+   "id": "2592ed73",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring (Optional)\n",
@@ -1504,7 +1430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "769fa5eb",
+   "id": "4514c94e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1554,7 +1480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea17c367",
+   "id": "19db1143",
    "metadata": {},
    "source": [
     "### Cleanup (NATS/etcd)\n",
@@ -1565,7 +1491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "000841c1",
+   "id": "4d99a26d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1590,7 +1516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0863159b",
+   "id": "5350de38",
    "metadata": {},
    "source": [
     "### Configuring Dynamo to Use NATS/etcd\n",
